--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: gainsboro;
 }
 
 code {
@@ -12,16 +13,12 @@ code {
     monospace;
 }
 
-img {
-  max-height: 250px;
-  min-height: 250px;
-  max-width: 250px;
-  aspect-ratio: auto;
-}
-
-
 .cardList {
   display: grid;
   grid-template-columns: repeat(auto-fit,300px);
   grid-auto-rows: auto;
+}
+
+.title {
+  
 }
