--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,22 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Modak&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Modak&display=swap");
 
 h1,
 p {
-    font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
 }
 
-.header { 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    margin: 10px;
+  margin: 10px;
 }
 
 .title {
-    font-family: 'Modak', cursive;
-    font-size: 50px;
-    margin: 0;
+  font-family: "Modak", cursive;
+  font-size: 50px;
+  margin: 0;
 }
